[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=8",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-ultraimagecompare"
authors = [
    { name = "Casper van Elteren", email = "caspervanelteren@gmail.com" },
    { name = "Luke Davis", email = "lukelbd@gmail.com" },
]
maintainers = [
    { name = "Casper van Elteren", email = "caspervanelteren@gmail.com" },
    { name = "Matthew R. Becker", email = "becker.mr@gmail.com" },
]
description = "A plugin for pytest-mpl to be compatible with python-xdist."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Matplotlib",
]
dependencies = [
    "numpy>=1.26.0",
    "typing-extensions; python_version < '3.12'",
]
dynamic = ["version"]

[tool.setuptools]
packages = { find = {} }
[tool.setuptools.packages.find]
include = ["pytest_ultraimagecompare"]

[tool.setuptools_scm]
write_to = "pytest_ultraimagecompare/_version.py"
write_to_template = "__version__ = '{version}'\n"
